# gpuocean

./: .gitignore  conda_environment.yml  main.py  pyproject.toml
containers/: lumi.def  lumi_jupyter.def
examples/: NorkystTwinExperiment.ipynb  lumi_ipyparallel_test.ipynb
jobs/: job_lumi.sh
src/gpuocean/SWEsimulators/: CDKLM16.py  CTCS.py  CombinedCDKLM16.py  FBL.py  KP07.py  ModelErrorKL.py  OceanStateNoise.py  Simulator.py
src/gpuocean/dataassimilation/: IEWPFOcean.py  LEnKFOcean.py
src/gpuocean/drifters/: BaseDrifterCollection.py  CPUDrifterCollection.py  GPUDrifterCollection.py  MLDrifterCollection.py
src/gpuocean/ensembles/: BaseDrifterEnsemble.py  BaseOceanStateEnsemble.py  CPUDrifterEnsemble.py  DoubleJetEnsemble.py  DrifterEnsemble.py  EnsembleFromFiles.py  MPIOceanModelEnsemble.py  MultiLevelOceanEnsemble.py  OceanModelEnsemble.py  OceanNoiseEnsemble.py  WindForcingEnsemble.py
src/gpuocean/utils/: Common.py  DoubleJetCase.py  DoubleJetExperimentUtils.py  GPUOcean_runDeterministic.py  IPythonMagic.py  NetCDFInitialization.py  Observation.py  OceanographicUtilities.py  SimReader.py  WindStress.py  random_numbers.py  timer.py  utils.py
src/gpuocean/utils/gpu/: __init__.py  hip_utils.py
src/gpuocean/utils/gpu/arrays/: arkawa.py  array2d.py  array3d.py  bathymetry.py  bc_arkawa.py
src/gpuocean/utils/gpu/arrays/cuda/: cuda_array2d.py  cuda_array3d.py
src/gpuocean/utils/gpu/arrays/cupy/: cupy_array2d.py
src/gpuocean/utils/gpu/arrays/hip/: enums.py  hip_array2d.py  hip_array3d.py
src/gpuocean/utils/gpu/kernels/: context.py  event.py  handler.py  stream.py
src/gpuocean/utils/gpu/kernels/cuda/: cuda_context.py  cuda_event.py  cuda_handler.py  cuda_stream.py
src/gpuocean/utils/gpu/kernels/cupy/: cupy_stream.py
src/gpuocean/utils/gpu/kernels/gpu_kernels/cuda/: CDKLM16_kernel.cu  FBL_boundary_NS.cu  interpolation.cu
src/gpuocean/utils/gpu/kernels/hip/: hip_context.py  hip_event.py  hip_handler.py  hip_stream.py
src/gpuocean/utils/gpu/utils/: random_numbers.py
src/gpuocean/utils/gpu/utils/cuda/: cuda_random_numbers.py
src/gpuocean/utils/gpu/utils/hip/: hip_random_numbers.py
src/gpuocean/utils/mpi/: __init__.py  distribute.py  grid.py  handler.py  wrapper.py
test/: mpi_test.py  testUtils.py
test/dataAssimilation/: BaseDrifterEnsembleTest.py  BaseDrifterTest.py  DrifterEnsemble_test.py  GPUDrifter_test.py  IEWPFOcean_test.py
test/pycudaTests/: Array3D_test.py  CUDAArray2D_test.py
test/schemes/: CDKLM16_test.py  CTCS_test.py  CombinedCDKLM16_plots.ipynb  CombinedCDKLM16_test.py  ConservationOfMass_test.py  FBL_test.py  KP07_test.py  NetCDF_test.py  RealisticForcing_Test.py
test/stochastic/: OceanStateNoise_LCG_test.py  OceanStateNoise_parent.py  OceanStateNoise_test.py  RandThroughOceanNoise_LCG_test.py  RandThroughOceanNoise_test.py  RandomNumbers_test.py
test/windForcing/: WindForcing_Plot.ipynb  WindForcing_Test.py
(+36 files in other folders)
