[project]
name = "gpuocean"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "netcdf4",
    "xmlrunner",
    "matplotlib",
    "nbdime",
    "mpi4py",
    "requests",
    "pytest",
    "pyproj",
    "pytools",
    "seawater",
    "gitpython",
    "scikit-image",
    "tqdm",
    "hip-python >=6.4.4,<7",
    "cupy",
    "notebook>=7.4.7",
]

[tool.uv]
extra-build-variables = { cupy = { CUPY_INSTALL_USE_HIP="1", ROCM_HOME="/opt/rocm", HCC_AMDGPU_TARGET="gfx1030" } }

[tool.uv.sources]
hip-python = { index = "hip" }

[[tool.uv.index]]
name = "hip"
url = "https://test.pypi.org/simple/"
explicit = true
