[project]
name = "gpuocean"
version = "1.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "netcdf4",
    "xmlrunner",
    "matplotlib",
    "nbdime",
    "mpi4py",
    "requests",
    "pytest",
    "pyproj",
    "pytools",
    "seawater",
    "gitpython",
    "scikit-image",
    "tqdm",
    "hip-python",
    "amd-cupy~=13.5.1",
    "notebook>=7.4.7",
    "scipy-stubs~=1.15.3",
]

[tool.uv]
default-groups = "all"
no-binary-package = ["mpi4py"]
#extra-build-variables = { cupy = { CUPY_INSTALL_USE_HIP="1", ROCM_HOME="/opt/rocm", HCC_AMDGPU_TARGET="gfx1030" } }

[tool.uv.sources]
hip-python = { index = "hip" }
amd-cupy = { index = "cupy" }

[[tool.uv.index]]
name = "hip"
url = "https://test.pypi.org/simple/"
explicit = true

[[tool.uv.index]]
name = "cupy"
url = "https://pypi.amd.com/simple"
explicit = true

[build-system]
requires = ["uv_build>=0.9.23,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydevd-pycharm~=253.29346.142",
]

